--- a/platformio.ini
+++ b/platformio.ini
@@ -168,9 +168,9 @@ lib_deps =
     IRremoteESP8266 @ 2.8.1
     https://github.com/Aircoookie/ESPAsyncWebServer.git @ ~2.0.4
   #For use of the TTGO T-Display ESP32 Module with integrated TFT display uncomment the following line
-    #TFT_eSPI
+    bodmer/TFT_eSPI @ 2.4.61
   #For use SSD1306 OLED display uncomment following
-    #U8g2@~2.27.2
+    U8g2@~2.27.2
   #For Dallas sensor uncomment following 2 lines
     #OneWire@~2.3.5
     #milesburton/DallasTemperature@^3.9.0
